--- a/views/contact.html
+++ b/views/contact.html
@@ -8,5 +8,62 @@
     <meta name="author" content="Sayan Nath" />
     <title>Contact - Sayan Nath</title>
   </head>
-  <body></body>
+  <link
+    rel="shortcut icon"
+    type="image/x-icon"
+    href="../assets/favicon/favicon.ico"
+  />
+  <link
+    href="https://fonts.googleapis.com/css?family=Nunito"
+    rel="stylesheet"
+  />
+  <link rel="stylesheet" href="../css/contact.css" />
+  <link
+    href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    rel="stylesheet"
+  />
+  <body>
+    <div style="margin: auto;">
+      <div class="about-section">
+        <h1>Contact Me</h1>
+      </div>
+
+      <div class="container">
+        <form action="">
+          <label for="fname">First Name</label>
+          <input
+            type="text"
+            id="fname"
+            name="firstname"
+            placeholder="Your First Name.."
+          />
+
+          <label for="lname">Last Name</label>
+          <input
+            type="text"
+            id="lname"
+            name="lastname"
+            placeholder="Your Last Name.."
+          />
+
+          <label for="country">Country</label>
+          <select id="country" name="country">
+            <option value="australia">India</option>
+            <option value="canada">Canada</option>
+            <option value="usa">USA</option>
+          </select>
+
+          <label for="subject">Subject</label>
+          <textarea
+            id="subject"
+            name="subject"
+            placeholder="Write something.."
+            style="height: 200px"
+          ></textarea>
+
+          <input type="submit" value="Submit" />
+        </form>
+      </div>
+    </div>
+  </body>
 </html>
