--- a/views/projects.html
+++ b/views/projects.html
@@ -26,67 +26,119 @@
     <div class="timeline">
       <div class="container left">
         <div class="content">
-          <h2>2017</h2>
+          <h2>Zero App</h2>
+          <p>(08,2020 - 12,2020)</p>
           <p>
-            Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec
-            admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis
-            iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto
-            primis ea eam.
+            E-Commerce App - One Stop destination for all your household needs.
+            <br />
+            <br />
+            <a style="color: black" href="https://myzeroapp.com/">Website</a
+            ><br />
+            <a
+              style="color: black"
+              href="https://play.google.com/store/apps/details?id=com.myzeroapp.zero_client"
+              >Playstore Link</a
+            ><br />
+            <a
+              style="color: black"
+              href="https://apps.apple.com/us/app/zero-vendor-app/id1545821469"
+              >App Store Link</a
+            >
           </p>
         </div>
       </div>
       <div class="container right">
         <div class="content">
-          <h2>2016</h2>
+          <h2>Video Conferencing Website</h2>
+          <p>(08,2020 - 09,2020)</p>
           <p>
-            Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec
-            admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis
-            iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto
-            primis ea eam.
+            Video Conferencing Website like Zoom
+            <br />
+            <br />
+            <a
+              style="color: black"
+              href="https://www.tranquil-river-58769.herokuapp.com/"
+              >Website</a
+            ><br />
+            <a
+              style="color: black"
+              href="https://github.com/sayannath/Video-Conferencing-Website"
+              >Github Link</a
+            ><br />
           </p>
         </div>
       </div>
       <div class="container left">
         <div class="content">
-          <h2>2015</h2>
+          <h2>Heart Disease Prediction</h2>
+          <p>(07,2020 - 08,2020)</p>
           <p>
-            Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec
-            admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis
-            iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto
-            primis ea eam.
+            Applied many classification techniques like - Logistic Regression,
+            K-Nearest Neighbours Classifier, Support Vector Machine, Decision
+            Tree Classifier, Random Forest Classifier and XGBoost Classifier.
+            <br />
+            <br />
+            <a
+              style="color: black"
+              href="https://github.com/sayannath/Heart-Disease-Prediction"
+              >Github Link</a
+            >
           </p>
         </div>
       </div>
       <div class="container right">
         <div class="content">
-          <h2>2012</h2>
+          <h2>Malaria Detection using CNN</h2>
+          <p>(07,2020 - 08,2020)</p>
           <p>
-            Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec
-            admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis
-            iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto
-            primis ea eam.
+            A deep learning model is build to detect malaria of the patients
+            with the cell images of the patients.
+            <br />
+            <br />
+            <a
+              style="color: black"
+              href="https://github.com/sayannath/Malaria-Detection-using-CNN"
+              >Github Link</a
+            >
           </p>
         </div>
       </div>
       <div class="container left">
         <div class="content">
-          <h2>2011</h2>
+          <h2>Resume.Me</h2>
+          <p>(06,2020 - 07,2020)</p>
           <p>
-            Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec
-            admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis
-            iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto
-            primis ea eam.
+            An app to record your self spoken Resume.
+            <br />
+            <br />
+            <a
+              style="color: black"
+              href="https://play.google.com/store/apps/details?id=iotkiit.resume.me"
+              >Playstore Link</a
+            ><br />
+            <a
+              style="color: black"
+              href="https://github.com/iot-lab-kiit/Video-Resume-App-IOT-LAB"
+              >Github Link</a
+            >
           </p>
         </div>
       </div>
       <div class="container right">
         <div class="content">
-          <h2>2007</h2>
+          <h2>American Sign Language Detection</h2>
+          <p>(05,2020 - 06,2020)</p>
           <p>
-            Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec
-            admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis
-            iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto
-            primis ea eam.
+            An app to detect American Signal Language by taking input from the
+            user, either from the phone’s camera or gallery. After detecting the
+            letter, it should be converted from text to speech.
+            <br />
+            <br />
+            <a
+              style="color: black"
+              href="https://github.com/DSC-KIIT/ASL-Live-Detection"
+              >Github Link</a
+            >
           </p>
         </div>
       </div>
