--- a/css/main.css
+++ b/css/main.css
@@ -12,7 +12,6 @@ h1 {
     border-right: .15em solid orange;
     white-space: nowrap;
     margin: 0 auto;
-    /* letter-spacing: .15em; */
     animation:
         typing 3.5s steps(30, end),
         blink-caret .5s step-end infinite;
@@ -46,8 +45,7 @@ h4 {
 }
 
 .bg {
-    background-image: url("../assets/home/bg.jpg");
-    filter: brightness(80%);
+    background-image: url("../assets/home/bg.gif");
     height: 100%;
     background-position: center;
     background-repeat: no-repeat;
