Bug Fix - About Page

--- a/views/about.html
+++ b/views/about.html
@@ -36,7 +36,7 @@
     <div class="row">
       <div class="column">
         <div class="card">
-          <img src="../assets/home/bg.jpg" alt="Jane" style="width: 100%" />
+          <img src="../assets/gallery/1.jpg" alt="Jane" style="width: 100%" />
           <div class="container">
             <h2>Sayan Nath</h2>
             <p class="title">
